--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
@@ -1018,38 +1019,45 @@
             <span class="sitename">AMBAR</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Ульяновск</p>
+            <p>Новосондецкий бульвар 15 А</p>
+            <p class="mt-3">
+              <strong>Телефон:</strong> 
+              <span>+7 (8422) 96-55-66</span>
+            </p>
+            <p>
+              <strong>Почта:</strong> 
+              <span>ambar@bk.ru</span>
+            </p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-telegram-plane"></i></a>
+            <a href="#"><i class="fab fa-vk"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+            <a href="#"><i class="fab fa-odnoklassniki"></i></a>
+            <a href="#"><i class="fab fa-viber"></i></a> <!-- viber нет в официальном FontAwesome, но есть варианты иконок в сторонних наборах -->
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Useful Links</h4>
+           <h4>Полезные ссылки</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
+            <li><a href="/terms">Условия использования</a></li>
+            <li><a href="/privacy">Политика конфиденциальности</a></li>
+            <li><a href="/faq">Частые вопросы</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
+          <h4>Наши услуги</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
+            <li><a href="#">Веб-дизайн</a></li>
+            <li><a href="#">Веб-разработка</a></li>
+            <li><a href="#">Маркетинг</a></li>
           </ul>
         </div>
 
@@ -1057,10 +1065,13 @@
           <h4>Горячие новости прямо из кухни</h4>
           <p>Подпишитесь на рассылку и первыми узнавайте о новинках меню, акциях и кулинарных секретах от шефа. Будьте в курсе всего самого вкусного, что происходит в нашем ресторане.</p>
           <form action="forms/newsletter.php" method="post" class="php-email-form">
-            <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Подписаться"></div>
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your subscription request has been sent. Thank you!</div>
+            <div class="newsletter-form">
+              <input type="email" name="email">
+              <input type="submit" value="Подписаться">
+            </div>
+            <div class="loading">Загрузка</div>
+            <div class="error-message">Ваш запрос на подписку не был отправлен! Повторите позже</div>
+            <div class="sent-message">Ваш запрос на подписку отправлен. Спасибо!</div>
           </form>
         </div>
 
@@ -1068,7 +1079,11 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Restaurantly</strong> <span>All Rights Reserved</span></p>
+      <p>© 
+        <span>Авторское право</span> 
+        <strong class="px-1 sitename">AMBAR</strong> 
+        <span>Все права защищены</span>
+      </p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
