--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </a>
 
         <nav id="navmenu" class="navmenu">
-          <ul>
+          <ul id="navmenu-ul">
             <li><a href="#hero" class="active">Главная<br></a></li>
             <li><a href="#about">О ресторане</a></li>
             <li><a href="#menu">Блюда</a></li>
@@ -93,7 +93,6 @@
             </li> -->
             <li><a href="#contact">Контакты</a></li>
           </ul>
-          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
         <a class="btn-book-a-table d-none d-xl-block" href="#book-a-table">
@@ -101,7 +100,9 @@
         </a>
 
       </div>
-
+      <div class="menu-burger-wrapper">
+          <div class="menu-burger"></div>
+      </div>
     </div>
 
   </header>
@@ -118,7 +119,7 @@
           <div class="col-lg-8 d-flex flex-column align-items-center align-items-lg-start">
             <h2 data-aos="fade-up" data-aos-delay="100">Добро пожаловать в <span>Амбар</span></h2>
             <p data-aos="fade-up" data-aos-delay="200">Доставляем вкусную еду уже более 5 лет!</p>
-            <div class="d-flex mt-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="d-flex mt-4 flex-direction" data-aos="fade-up" data-aos-delay="300">
               <a href="#menu" class="cta-btn">Наше меню</a>
               <a href="#book-a-table" class="cta-btn">Забронировать стол</a>
             </div>
