--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
               </svg>
             </div>
           </div>
+          <div class="swiper-menu-paggination"></div>
         </div><!-- Menu Filters -->
 
         <div class="row isotope-container" data-aos="fade-up" data-aos-delay="200">
