--- a/index.html
+++ b/index.html
@@ -1130,12 +1130,12 @@
 
   <div class="auth-modal-container">
     <div class="auth-modal">
-      <div class="auth-modal-wrapper">
-        <h5 class="auth-modal-title">Вход</h5>
+      <div class="auth-modal-svg">
         <svg class="auth-modal-close" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#cda45e" viewBox="0 0 256 256">
-          <path d="M208,32H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32Zm0,176H48V48H208V208ZM165.66,101.66,139.31,128l26.35,26.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32Z"></path>
+            <path d="M208,32H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32Zm0,176H48V48H208V208ZM165.66,101.66,139.31,128l26.35,26.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32Z"></path>
         </svg>
       </div>
+      <h5 class="auth-modal-title">Вход</h5>
       <form action="#" class="auth-modal-form" >
         <input class="auth-modal-tel" type="tel" placeholder="Введите номер телефона">
         <input class="auth-modal-pass" type="password" placeholder="Введите пароль">
@@ -1147,12 +1147,12 @@
  
   <div class="reg-modal-container">
     <div class="reg-modal">
-      <div class="reg-modal-wrapper">
-        <h5 class="reg-modal-title">Регистрация</h5>
-      <svg class="auth-modal-close" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#cda45e" viewBox="0 0 256 256">
-        <path d="M208,32H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32Zm0,176H48V48H208V208ZM165.66,101.66,139.31,128l26.35,26.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32Z"></path>
-      </svg>
+      <div class="reg-modal-svg">
+        <svg class="auth-modal-close" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#cda45e" viewBox="0 0 256 256">
+          <path d="M208,32H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32Zm0,176H48V48H208V208ZM165.66,101.66,139.31,128l26.35,26.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32Z"></path>
+        </svg>
       </div>
+      <h5 class="reg-modal-title">Регистрация</h5>
       <form action="#" class="reg-modal-form" >
         <input class="reg-modal-name" type="text" placeholder="Введите имя">
         <input class="reg-modal-last-name" type="text" placeholder="Введите фамилию">
