--- a/index.html
+++ b/index.html
@@ -1332,6 +1332,51 @@
               <button class="cart-modal-delete">Удалить</button>
             </div>
           </div>
+          <div class="cart-modal-card">
+            <div class="cart-modal-description-card">
+              <div class="cart-img-add">
+                <img class="cart-img" src="assets/img/menu/starters_1.jpg" alt="">
+                <span class="cart-price">₽ 359</span>
+              </div>
+              <div class="cart-discription-food">
+                <div class="cart-card">
+                  <a class="cart-detail-link" href="#">Куриные крылышки в соусе BBQ</a>
+                </div>
+                <div class="cart-ingredients">
+                  Куриные крылья, соус BBQ
+                </div>
+              </div>
+            </div>
+            <div class="cart-modal-btn">
+              <button class="cart-modal-plus">+</button>
+              <input class="cart-modal-count" type="number">
+              <button class="cart-modal-minus">-</button>
+              <button class="cart-modal-delete">Удалить</button>
+            </div>
+          </div>
+           <div class="cart-modal-card">
+            <div class="cart-modal-description-card">
+              <div class="cart-img-add">
+                <img class="cart-img" src="assets/img/menu/starters_1.jpg" alt="">
+                <span class="cart-price">₽ 359</span>
+              </div>
+              <div class="cart-discription-food">
+                <div class="cart-card">
+                  <a class="cart-detail-link" href="#">Куриные крылышки в соусе BBQ</a>
+                </div>
+                <div class="cart-ingredients">
+                  Куриные крылья, соус BBQ
+                </div>
+              </div>
+            </div>
+            <div class="cart-modal-btn">
+              <button class="cart-modal-plus">+</button>
+              <input class="cart-modal-count" type="number">
+              <button class="cart-modal-minus">-</button>
+              <button class="cart-modal-delete">Удалить</button>
+            </div>
+          </div>
+          <a class="cart-modal-design" href="#">Оформить заказ</a>
         </div>
       </div>
     </div>
