--- a/index.html
+++ b/index.html
@@ -1260,8 +1260,8 @@
   <!-- Modal cart -->
   <div class="cart-modal-container">
     <div class="cart-modal">
-       <div class="auth-modal-svg">
-        <svg class="auth-modal-close" xmlns="http://www.w3.org/2000/svg" fill="#cda45e" viewBox="0 0 256 256">
+       <div class="cart-modal-svg">
+        <svg class="cart-modal-close" xmlns="http://www.w3.org/2000/svg" fill="#cda45e" viewBox="0 0 256 256">
             <path d="M208,32H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32Zm0,176H48V48H208V208ZM165.66,101.66,139.31,128l26.35,26.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32Z"></path>
         </svg>
         <h5 class="cart-modal-title">Корзина</h5>
@@ -1376,7 +1376,11 @@
               <button class="cart-modal-delete">Удалить</button>
             </div>
           </div>
-          <a class="cart-modal-design" href="#">Оформить заказ</a>
+          <div class="cart-modal-total">
+            <span>Общая сумма:</span>
+            <span>2350 ₽</span>
+          </div>
+          <a class="cart-modal-design" href="/checkout.html">Оформить заказ</a>
         </div>
       </div>
     </div>
