--- a/index.html
+++ b/index.html
@@ -1380,7 +1380,7 @@
             <span>Общая сумма:</span>
             <span>2350 ₽</span>
           </div>
-          <a class="cart-modal-design" href="/checkout.html">Оформить заказ</a>
+          <a class="cart-modal-design" href="./checkout.html">Оформить заказ</a>
         </div>
       </div>
     </div>
