--- a/checkout.html
+++ b/checkout.html
@@ -55,7 +55,6 @@
                 <span>Самовывоз из пункта</span>
             </label>
         </div>
-
         <div class="checkout-form-checked">
             <div id="dinein-block" class="delivery-block" style="display: grid;">
                 <!-- Можно оставить пустым или текст: -->
@@ -90,42 +89,15 @@
         <svg class="table-modal-close" xmlns="http://www.w3.org/2000/svg" fill="#cda45e" viewBox="0 0 256 256">
             <path d="M208,32H48A16,16,0,0,0,32,48V208a16,16,0,0,0,16,16H208a16,16,0,0,0,16-16V48A16,16,0,0,0,208,32Zm0,176H48V48H208V208ZM165.66,101.66,139.31,128l26.35,26.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32Z"></path>
         </svg>
-        <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+        <div class="container section-title aos-init aos-animate table-modal-header" data-aos="fade-up">
             <h2>Бронирование</h2>
             <p>Забронировать стол</p>
         </div>
-        <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form">
-          <div class="row gy-4">
-            <div class="col-lg-4 col-md-6">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Ваше имя" required="">
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Ваша почта" required="">
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <input type="text" class="form-control" name="phone" id="phone" placeholder="Ваш телефон" required="">
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <input type="time" class="form-control" name="time" id="time" placeholder="Time" required="">
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <input type="number" class="form-control" name="people" id="people" placeholder="Количество персон" required="">
-            </div>
-          </div>
-
-          <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Message"></textarea>
-          </div>
-
-          <div class="text-center mt-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your booking request was sent. We will call back or send an Email to confirm your reservation. Thank you!</div>
-            <button type="submit">Забронировать стол</button>
-          </div>
+        <form action="#" method="post" role="form" class="table-modal-form">
+            <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
+            <input type="time" class="form-control" name="time" id="time" placeholder="Time" required="">
+            <input type="number" class="form-control" name="people" id="people" placeholder="Количество персон" required="">
+            <input type="number" class="form-control" name="people" id="people" placeholder="Выбирите стол" required="">
         </form>
     </div>
 
