--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
               <input type="number" class="form-control" name="people" id="people" placeholder="Количество персон" required="">
             </div>
              <div class="col-lg-4 col-md-6">
-              <input type="text" class="form-control" name="people" id="table" placeholder="Выбирите стол" required="">
+              <input type="text" class="form-control" name="table" id="tables" placeholder="Выберите стол" readonly required>
             </div>
           </div>
           <div class="text-center mt-3">
@@ -1389,20 +1389,44 @@
       <h5 class="table-modal-title">Выбор стола</h5>
       <span class="table-modal-floor">1 этаж</span>
         <div class="table-modal-row floor-one">
-            <div class="table-modal-table"></div>
-            <div class="table-modal-table"></div>
-            <div class="table-modal-table"></div>
-            <div class="table-modal-table"></div>
-            <div class="table-modal-table"></div>
-            <div class="table-modal-table"></div>
+            <div class="table-modal-table table-option" data-table="Стол №1">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
+            <div class="table-modal-table table-option" data-table="Стол №2">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
+            <div class="table-modal-table table-option" data-table="Стол №3">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
+            <div class="table-modal-table table-option" data-table="Стол №4">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
+            <div class="table-modal-table table-option" data-table="Стол №5">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
+            <div class="table-modal-table table-option" data-table="Стол №6">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
         </div>
         <div class="table-modal-row floor-two" style="display: none;">
-            <div class="table-modal-table"></div>
-            <div class="table-modal-table"></div>
-            <div class="table-modal-table"></div>
-            <div class="table-modal-table"></div>
-            <div class="table-modal-table"></div>
-            <div class="table-modal-table"></div>
+           <div class="table-modal-table table-option" data-table="Стол №7">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
+            <div class="table-modal-table table-option" data-table="Стол №8">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
+            <div class="table-modal-table table-option" data-table="Стол №9">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
+            <div class="table-modal-table table-option" data-table="Стол №10">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
+            <div class="table-modal-table table-option" data-table="Стол №11">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
+            <div class="table-modal-table table-option" data-table="Стол №12">
+              <img src="./assets/img/svg/table.png" alt="">
+            </div>
         </div>
         <button class="table-modal-chose">Выбрать</button>
     </div>
