--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
               <input type="time" class="form-control" name="time" id="time" placeholder="Time" required="">
             </div>
             <div class="col-lg-4 col-md-6">
-              <input type="text" class="form-control" name="table" id="table" placeholder="Количество персон" readonly required>
+              <input type="text" class="form-control" name="table" id="table" placeholder="cтол" readonly required>
             </div>
           </div>
           <div class="text-center mt-3">
@@ -1443,7 +1443,7 @@
         <form action="#" method="post" role="form" class="date-modal-form">
             <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
             <input type="time" class="form-control" name="time" id="time" placeholder="Time" required="">
-            <input type="text" class="form-control" name="table" id="table-modal" placeholder="Количество персон" readonly required>
+            <input type="text" class="form-control" name="table" id="table-modal" placeholder="cтол" readonly required>
             <button class="date-modal-btn">Забронировать</button>
         </form>
       </div>
@@ -1464,53 +1464,53 @@
       <span class="table-modal-floor">1 этаж</span>
         <div class="table-modal-row floor-one">
             <button class="table-modal-table table-option" data-table="Стол №1 - 1 этаж (1/6-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/6-персон</span>
             </button>
             <button class="table-modal-table table-option" data-table="Стол №2 - 1 этаж (1/6-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/6-персон</span>
             </button>
             <button class="table-modal-table table-option" data-table="Стол №3 - 1 этаж (1/6-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/6-персон</span>
             </button>
             <button class="table-modal-table table-option" data-table="Стол №4 - 1 этаж (1/6-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/6-персон</span>
             </button>
             <button class="table-modal-table table-option" data-table="Стол №5 - 1 этаж (1/6-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/6-персон</span>
             </button>
             <button class="table-modal-table table-option" data-table="Стол №6 - 1 этаж (1/6-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/6-персон</span>
             </button>
         </div>
         <div class="table-modal-row floor-two" style="display: none;">
            <button class="table-modal-table table-option" data-table="Стол №7 - 2 этаж (1/8-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/8-персон</span>
             </button>
             <button class="table-modal-table table-option" data-table="Стол №8 - 2 этаж (1/8-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/8-персон</span>
             </button>
             <button class="table-modal-table table-option" data-table="Стол №9 - 2 этаж (1/8-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/8-персон</span>
             </button>
             <button class="table-modal-table table-option" data-table="Стол №10 - 2 этаж (1/8-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/8-персон</span>
             </button>
             <button class="table-modal-table table-option" data-table="Стол №11 - 2 этаж (1/8-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/8-персон</span>
             </button>
             <button class="table-modal-table table-option" data-table="Стол №12 - 2 этаж (1/8-персон)">
-              <img src="./assets/img/svg/table.png" alt="">
+              <img src="./assets/img/table.png" alt="">
               <span class="table-modal-text">1/8-персон</span>
             </button>
         </div>
