--- a/index.html
+++ b/index.html
@@ -711,11 +711,11 @@
 
         <form action="#" method="post" role="form" class="php-email-form">
           <div class="row gy-4">
-            <div class="col-lg-4 col-md-6 .input-wrapper ">
+            <div class="col-lg-4 col-md-6 input-wrapper ">
               <input type="date" name="date" class="form-control" id="date" placeholder="Date" required="">
               <span class="fake-placeholder">дд.мм.гггг</span>
             </div>
-            <div class="col-lg-4 col-md-6 .input-wrapper ">
+            <div class="col-lg-4 col-md-6 input-wrapper ">
               <input type="time" class="form-control" name="time" id="time" placeholder="Time" required="">
               <span class="fake-placeholder">--:--</span>
             </div>
